# Young_Firms_collected_with_LLM

./: .env.example  .gitignore  AGENTS.md  README.md  analyze_candidates.py  calculate_pipeline_costs.py  deduplicate_snowball_candidates.py  discovery_memory.py  export_candidates.py  export_final_review.py  export_manual_close_reading_cases.py  generate_followup_queries.py  generate_queries.py  manual_close_reading_app.py  model_1_candidate_extraction.py  model_2_enrichment.py  model_3_validation.py  notes.txt  pipeline_status.py  pyproject.toml  rebuild_cumulative_masters.py  retrieve_with_openai.py  run_pipeline.py  snowball_discovery.py  view_csv.py  view_queries.py
analysis/: pipeline_audit_round_099.md
data/: queries.jsonl  queries_extended.jsonl  sample_retrieved.jsonl
docs/: CSV_REVIEW_GUIDE.md  QUERY_GENERATION.md
prompts/: README.md  snowball_discovery_abroad_danish_founders_prompt.txt  snowball_discovery_prompt.txt
src/: aggregation.py  data_models.py  enrichment_openai.py  export.py  founding_eligibility.py  io.py  main.py  manual_close_reading.py  mention_extraction.py  normalization.py  openai_batch.py  openai_costs.py  pipeline.py  pipeline_rounds.py  query_generation.py  seed_list.py
tests/: test_deduplicate_snowball_candidates.py  test_discovery_memory.py  test_export.py  test_export_final_review.py  test_manual_close_reading.py  test_model_1_candidate_extraction.py  test_model_2_enrichment.py  test_model_3_validation.py  test_openai_batch.py  test_openai_costs.py  test_pipeline_helpers.py  test_pipeline_rounds.py  test_pipeline_status.py  (+6 more)
(+20 files in other folders)
