[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "young-firms-recall"
version = "0.1.0"
description = "Minimal recall-first company discovery pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "streamlit>=1.44.0",
    "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
